Fix CSS issues on smaller screens #4

--- a/src/components/dialog/Dialog.module.scss
+++ b/src/components/dialog/Dialog.module.scss
@@ -2,4 +2,5 @@
 
 .dialog {
   background-color: $white;
+  overflow-y: scroll;
 }
